--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,23 +1,26 @@
 
+<div class="col-6">
+  <h3>Burgers to Eat</h3>
+    {{#each uneaten}}
+      <div class="form-group form-inline">
+  	  <label class="col col-form-label text-left">{{name}}</label>
+        <button
+          class="btn btn-primary devour text-right"
+          value="{{id}}"
+          formaction="/devour"
+          formmethod="POST" 
+          type="submit">Devour It</button>
+        </div>
+    {{/each}}
+  </ul>
+</div>
 
-<ul>
-  {{#each eaten}}
-  	<li>
-  	   <p>ID: {{id}}</p>
-       <p>Task: {{name}}</p>
-  	</li>
-  {{/each}}
-</ul>
-
-<ul id="uneaten">
-  {{#each uneaten}}
-  	<li data-value="{{id}}">
-  	   <p>ID: {{id}}</p>
-       <p>Task: {{name}}</p>
-	<button class="devour" value="{{id}}" formaction="/devour" formmethod="POST" type="submit">Devour It</button>
-
-  	</li>
-  {{/each}}
-</ul>
-
-
+<div class="col-6">
+  <h3>Burgers I've Eaten</h3>
+    {{#each eaten}}
+      <div class="form-group form-inline">
+  	  <label class="col col-form-label">{{name}}</label>
+      </div>
+    {{/each}}
+  </ul>
+</div>
