--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 
-<div class="col-6">
+<div class="col-12 col-md-6">
   <h3>Burgers to Eat</h3>
     {{#each uneaten}}
       <div class="form-group form-inline">
@@ -15,7 +15,7 @@
   </ul>
 </div>
 
-<div class="col-6">
+<div class="col-12 col-md-6">
   <h3>Burgers I've Eaten</h3>
     {{#each eaten}}
       <div class="form-group form-inline">
