--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
    <header class="container-fluid">
       <div class="row text-light bg-dark py-1">
         <div class="col text-center">
-          <h1>Eat Da Burger</h1>
+          <h1>Eat Da Burger!</h1>
         </div>
       </div>
     </header>
