Documented classes, HTML.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,11 @@
   </head>
 
   <body class="bg-light">
-   <header class="container-fluid">
+
+    <!--
+      Header row
+    -->
+    <header class="container-fluid">
       <div class="row text-light bg-dark py-1">
         <div class="col text-center">
           <h1>Eat Da Burger!</h1>
@@ -25,6 +29,9 @@
 
     <div class="container mt-3">
 
+      <!--
+        Search bar
+      -->
       <div class="row">
         <div class="col-12">
           <form action="/" method="POST" class="form-inline">
@@ -36,6 +43,9 @@
         </div>
       </div>
 
+      <!--
+        Burger lists
+      -->
       <div class="row mt-3">
         {{{ body }}}
       </div>
